--- a/.github/workflows/publish-docker-image-to-acr.yml
+++ b/.github/workflows/publish-docker-image-to-acr.yml
@@ -16,12 +16,19 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-
+          
+      - name: Login to ACR
+        uses: azure/docker-login@v1
+        with:
+          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
+          
       - name: Docker build
         working-directory: ./TestWebProject.Web/TestWebProject.Web.Api/
         run: |
-          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/testwebapp:latest .
+          docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/testwebapp:latest .
 
       - name: Docker push
         run: |
-          docker push ${{ secrets.ACR_LOGIN_SERVER }}/testwebapp:latest
+          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/testwebapp:latest
