--- a/.github/workflows/publish-docker-image-to-acr.yml
+++ b/.github/workflows/publish-docker-image-to-acr.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Docker build
         working-directory: ./TestWebProject.Web/TestWebProject.Web.Api/
         run: |
-          docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/testwebapp:latest .
+          docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/testwebapp:${{ github.event.release.tag_name }} .
 
       - name: Docker push
         run: |
-          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/testwebapp:latest
+          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/testwebapp:${{ github.event.release.tag_name }}
