--- a/.github/workflows/publish-docker-image-to-acr.yml
+++ b/.github/workflows/publish-docker-image-to-acr.yml
@@ -32,3 +32,17 @@ jobs:
       - name: Docker push
         run: |
           docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/testwebapp:${{ github.event.release.tag_name }}
+  deploy:
+      permissions:
+        contents: none
+      needs: build-and-push
+      runs-on: ubuntu-latest
+  
+      steps:
+        - name: Deploy to Azure Web App
+          id: deploy-to-webapp
+          uses: azure/webapps-deploy@v2
+          with:
+            app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
+            publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+            images: ${{ secrets.REGISTRY_LOGIN_SERVER }}/testwebapp:${{ github.event.release.tag_name}}
